--- a/index.html
+++ b/index.html
@@ -172,9 +172,10 @@
     <p><strong>Co-Head Girl:</strong> Namita Shastri | 📞 9106307620 | ✉️ shastrinamita08@gmail.com</p>
     <p><strong>Official Email:</strong> codeorbit01@gmail.com</p>
     <div class="socials">
-      <a href="https://www.instagram.com/codeorbitt" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://discord.gg/ZZR7dfNV" target="_blank"><i class="fab fa-discord"></i></a>
-      <a href="https://chat.whatsapp.com/DKH9bU5ap0BKcwxlUleyS5" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <h2>Join Our Community</h2>
+      <a href="https://www.instagram.com/codeorbitt" target="_blank">Instagram</a>
+      <a href="https://discord.gg/ZZR7dfNV" target="_blank">Discord</a>
+      <a href="https://chat.whatsapp.com/DKH9bU5ap0BKcwxlUleyS5" target="_blank">WhatsApp</a>
     </div>
   </section>
 
@@ -222,4 +223,5 @@
   </script>
 </body>
 </html>
+
 
