--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
     <p><strong>Official Email:</strong> codeorbit01@gmail.com</p>
     <div class="socials">
       <h2>Join Our Community</h2>
-      <a href="https://www.instagram.com/codeorbitt" target="_blank">Instagram</a>
-      <a href="https://discord.gg/ZZR7dfNV" target="_blank">Discord</a>
-      <a href="https://chat.whatsapp.com/DKH9bU5ap0BKcwxlUleyS5" target="_blank">WhatsApp</a>
+      <a href="https://www.instagram.com/codeorbitt" target="_blank">Instagram<i class="fab fa-instagram"></i></a>
+      <a href="https://discord.gg/ZZR7dfNV" target="_blank">Discord<i class="fab fa-discord"></i></a>
+      <a href="https://chat.whatsapp.com/DKH9bU5ap0BKcwxlUleyS5" target="_blank">WhatsApp<i class="fab fa-whatsapp"></i</a>
     </div>
   </section>
 
@@ -223,5 +223,6 @@
   </script>
 </body>
 </html>
+
 
 
