--- a/index.html
+++ b/index.html
@@ -178,9 +178,12 @@
       <a href="https://chat.whatsapp.com/DKH9bU5ap0BKcwxlUleyS5" target="_blank"><i class="fab fa-whatsapp"></i</a>
     </div>
   </section>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSdOkqs2ZIxkduTRvsdfoUY3Pk1RtNCHVQqCYwUu-V2X-j9qFg/viewform" 
+     target="_blank" class="float-btn">✨ Join Us For Free</a>
 
+  <!-- ---------- FOOTER ---------- -->
   <footer>
-    <p>© 2025 CodeOrbit | All Rights Reserved</p>
+    © 2025 CodeOrbit Club | All Rights Reserved
   </footer>
 
   <script>
@@ -223,6 +226,7 @@
   </script>
 </body>
 </html>
+
 
 
 
