--- a/index.html
+++ b/index.html
@@ -98,6 +98,53 @@
       nav ul { flex-direction: column; background:#0B1E33; position: absolute; top: 60px; right: 0; display: none; padding: 1rem; }
       nav.active ul { display: flex; }
     }
+    /* ---------- FLOATING BUTTON ---------- */
+    .float-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #145DA0;
+      color: #fff;
+      padding: 14px 20px;
+      border-radius: 50px;
+      font-size: 16px;
+      font-weight: bold;
+      box-shadow: 0 0 12px rgba(0,0,0,0.5);
+      text-decoration: none;
+      transition: 0.3s;
+      z-index: 2000;
+    }
+
+    .float-btn:hover {
+      background: #0B1E33;
+    }
+
+    /* ---------- FOOTER ---------- */
+    footer {
+      background: #000;
+      padding: 20px;
+      text-align: center;
+      font-size: 14px;
+      color: #aaa;
+    }
+
+    /* ---------- RESPONSIVE ---------- */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        text-align: center;
+      }
+      nav {
+        margin-top: 10px;
+      }
+      nav a {
+        display: inline-block;
+        margin: 8px;
+      }
+      #hero h1 {
+        font-size: 2rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -226,6 +273,7 @@
   </script>
 </body>
 </html>
+
 
 
 
