--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CodeOrbit • Official Club</title>
+  <title>CodeOrbit</title>
   <link rel="shortcut icon" href="HAckerina.png" /> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
@@ -395,7 +395,7 @@
   <!-- HERO -->
   <section class="hero">
     <div class="wrap">
-      <h2>Where Ideas Revolve Around Innovation 🚀</h2>
+      <h2>Where Ideas Revolve🚀</h2>
       <p>Join our fun & educational community: hackathons, UI/UX, coding, art, music and more.</p>
       <a class="btn" target="_blank"
         href="https://docs.google.com/forms/d/e/1FAIpQLSdOkqs2ZIxkduTRvsdfoUY3Pk1RtNCHVQqCYwUu-V2X-j9qFg/viewform">Join
@@ -539,3 +539,4 @@
 </body>
 
 </html>
+
