--- a/index.html
+++ b/index.html
@@ -458,11 +458,6 @@
               href="mailto:smeet2880@gmail.com">smeet2880@gmail.com</a></p>
         </div>
         <div class="tile">
-          <h4>👩 Namita Shastri</h4>
-          <p><a href="tel:+919106307620">91063 07620</a><br /><a
-              href="mailto:shastrinamita08@gmail.com">shastrinamita08@gmail.com</a></p>
-        </div>
-        <div class="tile">
           <h4>📨 Official Email</h4>
           <p><a href="mailto:codeorbit01@gmail.com">codeorbit01@gmail.com</a></p>
         </div>
@@ -479,13 +474,13 @@
   <!-- MEMBERSHIP -->
   <section id="membership">
     <h3>Membership & ID Card</h3>
-    <p class="lead">Pick a plan, pay securely, and unlock your ID Card form.</p>
+    <p class="lead">Pick a plan to be member, pay securely, and unlock your ID Card form.</p>
     <div class="membership">
       <div class="plans">
         <label class="plan"><input type="radio" name="plan" value="49" checked> Monthly <div class="price">₹49</div>
           </label>
         <label class="plan"><input type="radio" name="plan" value="199"> Yearly <div class="price">₹199</div></label>
-        <label class="plan"><input type="radio" name="plan" value="499"> Forever+Volunteer <div class="price">₹499</div>
+        <label class="plan"><input type="radio" name="plan" value="499"> Forever+Volunteer Opportunity <div class="price">₹499</div>
           </label>
       </div>
       <div class="methods">
@@ -505,7 +500,7 @@
 
   <a class="float-btn"
     href="https://docs.google.com/forms/d/e/1FAIpQLSdOkqs2ZIxkduTRvsdfoUY3Pk1RtNCHVQqCYwUu-V2X-j9qFg/viewform"
-    target="_blank">✨ Join Free</a>
+    target="_blank">✨ Join Us For Free</a>
 
   <footer>© 2025 CodeOrbit Club</footer>
 
@@ -539,4 +534,5 @@
 </body>
 
 </html>
+
 
