--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
       const method = document.querySelector('input[name="method"]:checked').value;
 
       if (method === 'Offline') {
-        alert("Please contact Co-Heads within 48 hours to pay offline.");
+        alert("Please contact Meet Shah within 48 hours to pay offline.");
         return;
       }
 
@@ -534,5 +534,6 @@
 </body>
 
 </html>
+
 
 
